--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
+    "@react-native-async-storage/async-storage": "^1.17.11",
     "@react-navigation/bottom-tabs": "^6.5.3",
     "@react-navigation/native": "^6.1.1",
     "@react-navigation/native-stack": "^6.9.7",
@@ -17,6 +18,7 @@
     "expo-blur": "~12.0.1",
     "expo-font": "~11.0.1",
     "expo-status-bar": "~1.4.2",
+    "lottie-react-native": "5.1.4",
     "react": "18.1.0",
     "react-native": "0.70.5",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
