--- a/package.json
+++ b/package.json
@@ -26,7 +26,9 @@
     "react-native-screens": "^3.18.2",
     "react-native-webview": "11.23.1",
     "react-native-youtube": "^2.0.2",
-    "react-native-youtube-iframe": "^2.2.2"
+    "react-native-youtube-iframe": "^2.2.2",
+    "expo-image-picker": "~14.0.2",
+    "expo-file-system": "~15.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
