--- a/package.json
+++ b/package.json
@@ -16,19 +16,20 @@
     "@react-navigation/native-stack": "^6.9.7",
     "expo": "~47.0.12",
     "expo-blur": "~12.0.1",
+    "expo-file-system": "~15.1.1",
     "expo-font": "~11.0.1",
+    "expo-image-picker": "~14.0.2",
     "expo-status-bar": "~1.4.2",
     "lottie-react-native": "5.1.4",
     "react": "18.1.0",
     "react-native": "0.70.5",
+    "react-native-image-picker": "^5.1.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-safe-area-context": "^4.4.1",
     "react-native-screens": "^3.18.2",
-    "react-native-webview": "11.23.1",
+    "react-native-webview": "^11.23.1",
     "react-native-youtube": "^2.0.2",
-    "react-native-youtube-iframe": "^2.2.2",
-    "expo-image-picker": "~14.0.2",
-    "expo-file-system": "~15.1.1"
+    "react-native-youtube-iframe": "^2.2.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
